unpackaged/main/default/objects/litify_pm__Dice_Log__c/litify_pm__Dice_Log__c.object-meta.xml
<CustomObject>
    <description>Log of selected records from Dice component</description>
    <label>DICE Log</label>
    <nameField>
        <displayFormat>DLOG-{0}</displayFormat>
        <label>DICE Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DICE Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>