unpackaged/main/default/objects/litify_pm__Dice_Log__c/fields/litify_pm__Dice_Queue__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Dice_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>DICE Queue</inlineHelpText>
    <label>DICE Queue</label>
    <referenceTo>litify_pm__Dice_Queue__c</referenceTo>
    <relationshipLabel>DICE Logs</relationshipLabel>
    <relationshipName>Dice_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>