unpackaged/main/default/objects/litify_pm__Dice_Log__c/fields/litify_pm__record_id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__record_id__c</fullName>
    <externalId>true</externalId>
    <label>record_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>