unpackaged/main/default/objects/litify_pm__Dice_Log__c/fields/litify_pm__timestamp__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>