unpackaged/main/default/objects/litify_pm__Dice_Log__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__record_id__c</columns>
    <columns>litify_pm__timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>